// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "007888065a6c69",
  "0394b43f946a29",
  "192d4ec69bc8b4",
  "01c95da5a4c4f8",
  "0dc4376245f7bf",
  "0e6f24cec22993",
  "0b5f7bb3d0bd2d",
  "058ba98fa64a0a",
  "00f9496061ce17",
  "1fc541dd68dd6e",
  "0b0a7a92ec30b9",
  "126058cf5f0416",
  "049e35ef6c21a9",
  "0b7291d5c646b1",
  "126771bca0b138",
  "1394586761c1a0",
  "0213a2957e496b",
  "020c617b35f3e4",
  "01d84d312a5dc0",
  "04f3c61aa1b3b0",
  "03d9efd7eeee68",
  "05597c9ae6f91d",
  "118467fe2c5c3a",
  "0e88af0e1f9684",
  "1c2ece82a6033c",
  "08f97e0eca0bfd",
  "049e155dd2d0d3",
  "16d6a050cd70c1",
  "0b397517afa48e",
  "0831892c73c326",
  "14d46415d485c7",
  "09ca1106c6387c",
  "0c4faaf4394b30",
  "17a41ec523cde0",
  "119d6c95198e37",
  "12276a40909589",
  "0b20e13546bbf2",
  "00ce8bb0ba119f",
  "09b065c7188e83",
  "12846d5c9e1639",
  "07238d0fbc1f44",
  "01715c92e60a72",
  "078aa56234629c",
  "1ce2e84ccdb5fe",
  "1f04f5b5bdf418",
  "1536f4d727548b",
  "08fd5fb38209ef",
  "147a212a961266",
  "135da8f067cf68",
  "1804db72ebf688",
  "1a62e792c82137",
  "1fe1fa45d4d7c4",
  "065243ac2c952b",
  "0eec063cd3eb74",
  "0d6136a641825c",
  "1566e79c4b3064",
  "0f3c2982dd6002",
  "1fad9ebe79a78a",
  "0fbc7f59f6b494",
  "0db352e2d96a43",
  "0454a1db432672",
  "1821e031fb255d",
  "1a4ed8d4cdb646",
  "1c9e28e4178b72",
  "1e359934f1f1ec",
  "04d08595732868",
  "14645165bbb81b",
  "17145b209eeec9",
  "1f7f39e0b9d231",
  "05b8c35e046669",
  "0dd1aff7bda19b",
  "1dec5c9732c074",
  "14d5d733f74707",
  "08b01d9971b60e",
  "067124248b8aff",
  "0199bfbf94af92",
  "1633109bb6460a",
  "0fc08b5f94468c",
  "03fe6d164e43a8",
  "1685bc33bae34a",
  "0bb5458a74df2c",
  "0325478d005440",
  "0337a85e9308f2",
  "0a8c886d80fd5c",
  "185311666b61fc",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "1efd163bfb33da",
  "1f46c4ef6ac4d7",
  "11b7ab2695eb18",
  "072ce160c8082d",
  "0769e67c1b0900",
  "046c23dcba92bf",
  "09c00cf3cd8ec2",
  "194be5fdc6a242",
  "05416aea7f910e",
  "167363eac7efb7",
  "07de793f8f1de4",
  "03d49c53032428",
  "155f371315febc",
  "04c855c392c76c",
  "04b33c25b0354c",
  "0fe1bdd572ffa7",
  "04c1a783caaf23",
  "163c7dd316b222",
  "06640ab18f1382",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "0c4cf8c26fbc50",
  "040fc86161eaac",
  "02f9c9aeb78f22",
  "15ce100a9859b9",
  "1e7f8fc9042a64",
  "10891eb94d6358",
  "079c54f3befcd8",
  "1c5f6097620bdd",
  "14bcc4e020a530",
  "0093bed74ab875",
  "0ad1af84f58c53",
  "0c9f3b684a2422",
  "01ac746dd90d55",
  "0f5899f30868dd",
  "04b3d9128ae6cb",
  "120844a2e1d975",
  "120616b63e336a",
  "146158308d5909",
  "114a9ba687508a",
  "032adbc994f3d9",
  "0e5180662a4fd9",
  "19bdbf9f197afb",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "13fb2215ed0ea6",
  "0883bd1d8b5e18",
  "1832573acb5e3a",
  "0dda92ef714031",
  "07ed1e4ecb3e7b",
  "0beee8e7066efa",
  "048fe83eec5496",
  "1b9fd603579615",
  "02007912c64c0a",
  "0a1664372d5768",
  "1995a88c953829",
  "1e72713f0e565e",
  "1ec4f7f89445e5",
  "037f731d280bd0",
  "108dc65f39c17f",
  "05e454469c26b5",
  "148428b1731bc1",
  "04be7e8b1f80de",
  "06474b3cab5f7d",
  "1a3c393c35c89a",
  "1c6671f117e7bb",
  "0042ab311399ab",
  "17ca07b6641cab",
  "1398968fe86310",
  "1e06efdb682112",
  "005577e32fbe21",
  "16083d4582448c",
  "09e391eaeee70c",
  "1e5edb34a203b8",
  "0a0ad09dd194b9",
  "19c62128f32a3a",
  "03e98115f3150d",
  "14bd19fca59aea",
  "04d907b54695ab",
  "13b49d727724da",
  "040f6e1028bc3d",
  "04cb4d64989dd1",
  "0343dfd86fa025",
  "0a45dc5319fffc",
  "0a8aa05e0f2403",
  "140aafdbf875e7",
  "067347ba25034c",
  "184eb45315e45b",
  "08cecb857f4be9",
  "1216c235d3b01e",
  "02b5b3be8bd992",
  "11c41c6c7b14e1",
  "163652467d3afb",
  "0e19475b802fda",
  "0e8a730852fb31",
  "1d135d725e06fc",
  "1a79c9e5600971",
  "1f18ea90ca9803",
  "1aecadac49e364",
  "033154763f2681",
  "1c0500967d4d78",
  "03532462f8c3d4",
  "0615b948a32d94",
  "0bf3c042f5fde6",
  "1fbcd656c150c1",
  "01b03de9c0e033",
  "1aefbea6d8f8d8",
  "0e9a47979534bd",
  "108a0b5a18a831",
  "09572007510ad1",
  "1b3de717748274",
  "0172763ebe7592",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "0c404534faa95c",
  "0f2a85340a6d26",
  "0da276b538e3d6",
  "0cb9788fe28ffe",
  "1421ffb42c68c9",
  "03141fa222ebbf",
  "0b5f7bb3d0bd2d",
  "1cd1523fe91f58",
  "00f9496061ce17",
  "1129acaa5a675f",
  "129e6d129eb6d4",
  "1ff28b4e1e4860",
  "180282d47c9425",
  "13e8654c8f0869",
  "0afcaacbf285ba",
  "0b640bc0278b08",
  "0213a2957e496b",
  "100d1b6daf9e01",
  "0a2f4ebf42e2f9",
  "1689eee938c2dd",
  "020782de372b0a",
  "1da90d550d8833",
  "17fbd131c30c9a",
  "1329a68ee47e20",
  "0ffd30b0497b0c",
  "0799107d32e2f6",
  "1fc55155e5226b",
  "09f9532749e295",
  "0732c1307885db",
  "05a76dda89bb59",
  "1550928ac58f8e",
  "1670f57a7efc45",
  "1c1fca6bce416d",
  "08abf75ace9217",
  "14e1a2d9b37dbc",
  "12276a40909589",
  "0a6a637d2eb76e",
  "1d87e2b2dd2741",
  "0673042e01c782",
  "032b8132953f82",
  "004526c3299511",
  "077f26ffdc9c80",
  "1801385c016acb",
  "05187c7a99093a",
  "19da289b2d6af0",
  "1bd3b03769ca9e",
  "1bf51faa6ba7f5",
  "147a212a961266",
  "0640eb3cafad80",
  "0909b960a87e62",
  "0993e2d9731bfb",
  "1fe1fa45d4d7c4",
  "0cde9b3ba1fd35",
  "0eec063cd3eb74",
  "07b110e216955e",
  "1091f445d47c04",
  "07b9895973b06b",
  "1fad9ebe79a78a",
  "16d753f7c58657",
  "04214d18925180",
  "033d968cb9f4d1",
  "19a5983c4ac86f",
  "0019a068e52887",
  "1c9e28e4178b72",
  "1da5aa30232a31",
  "04d08595732868",
  "1de5e3b85e994d",
  "095fdfb700c03c",
  "0c905dd35550be",
  "0b2eac712b5b98",
  "11e2e4e29b5a3f",
  "14a6bc28924a17",
  "1b5ade1a8c498e",
  "1c7867af2ffffe",
  "1b1b6476747ae3",
  "12666ef88317ab",
  "0275148a964d3b",
  "181902f56ee641",
  "03b19bd016d33d",
  "13402777a41abc",
  "1e69694e9843b6",
  "0325478d005440",
  "0935eae3299e56",
  "0bde63cd2f9b16",
  "0bd082dc2adf24",
  "06c1b6b5681d5e",
  "0871f51a3c0b05",
  "0929cb1e4b90ab",
  "1137db6b644cd0",
  "0827e827cf3fc0",
  "10de5795aa28b5",
  "190d7c2e327d3d",
  "0d3b85d9b75bc0",
  "118b7bc4afe5b6",
  "1274ce9edf0115",
  "085969cb262676",
  "13cb71ccb5afb7",
  "15b4db3ade4c5a",
  "03d49c53032428",
  "1d32ae77deb7de",
  "0b0acc46ca5334",
  "1e057147173bf8",
  "0fe1bdd572ffa7",
  "0406f23fd97613",
  "128b4f3c602c6a",
  "12ffba1ed401a4",
  "0268d7f0dafe95",
  "03611190f65d94",
  "1a6499cd660c45",
  "0f7d887fe1b5f5",
  "0dfce17da48e79",
  "15ce100a9859b9",
  "0d3ab85ca9969c",
  "0471e62dc73cca",
  "1edb0bcb02a281",
  "0c855bf4026101",
  "12f693f7f3c666",
  "04afd7b6610f84",
  "186fdde8473fb6",
  "1fc51d61fb3659",
  "01ac746dd90d55",
  "1730eabc04806f",
  "04b3d9128ae6cb",
  "1b2ac6bc23d0dd",
  "0cc7cfae855781",
  "09e9d660c59f61",
  "122f0684026835",
  "100b6bb52d1081",
  "015193dd737374",
  "19bdbf9f197afb",
  "163a349dacf3ed",
  "0e03d598e5039f",
  "135677df396080",
  "1072b4eee01b13",
  "10c7f50bd4dce3",
  "1832573acb5e3a",
  "0690971c86d915",
  "020f4366cf8be9",
  "01f802464c4657",
  "02801c87661c69",
  "1b9fd603579615",
  "0d9fdc8b9be561",
  "0a1664372d5768",
  "1d1afeeff15c78",
  "087d609790be05",
  "10122d08a4c90d",
  "037f731d280bd0",
  "100ddacd91621f",
  "18aea04c6d16a3",
  "09014c9469f8dd",
  "037766f9d4e97c",
  "1a6477f8b8eba3",
  "07295b95055795",
  "179a0f39111351",
  "1031a4965bbfe7",
  "0abc813660748c",
  "0bd8d94b32b5c2",
  "04fd33db883e5b",
  "12c6b2638f3e17",
  "071016afb646de",
  "19c393a2bcb32f",
  "1abd94be33e9bb",
  "070cba07175ef1",
  "01942ff844c0da",
  "03e98115f3150d",
  "0e1db3fef07b6f",
  "04d907b54695ab",
  "0d163071f29b3d",
  "03565540a4a47b",
  "189816f4258977",
  "0343dfd86fa025",
  "0aa83edb8946b9",
  "10cf4dc6706f6f",
  "1e909d2bf76c64",
  "1f6edfd3bafbdf",
  "15508343df3db5",
  "1c0cf2d0c81399",
  "05377aae435acd",
  "02b5b3be8bd992",
  "12d2cccf8618f1",
  "11e06d515e1719",
  "0e19475b802fda",
  "0e8a730852fb31",
  "1e1e6dcc7f6e1f",
  "1bc5fd62d4bcd6",
  "08bc1f50ee610b",
  "1e0f3a8e5f0c75",
  "09940dc4df55a7",
  "14320697f8eac2",
  "08b7362d988ab0",
  "11d4678f66c376",
  "1d1f5c6a73375b",
  "17a2efac186d5f",
  "081c5eed1e7b1c",
  "05e51a9dcbfbf3",
  "0e9a47979534bd",
  "10c26f144bc8ab",
  "01ed85255500e8",
  "06617dd8140369",
  "136add78550328",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "007888065a6c69",
  "0f2a85340a6d26",
  "192d4ec69bc8b4",
  "01c95da5a4c4f8",
  "0dc4376245f7bf",
  "0e6f24cec22993",
  "0b5f7bb3d0bd2d",
  "058ba98fa64a0a",
  "00f9496061ce17",
  "1129acaa5a675f",
  "129e6d129eb6d4",
  "126058cf5f0416",
  "049e35ef6c21a9",
  "0b7291d5c646b1",
  "126771bca0b138",
  "1394586761c1a0",
  "0213a2957e496b",
  "020c617b35f3e4",
  "01d84d312a5dc0",
  "04f3c61aa1b3b0",
  "03d9efd7eeee68",
  "1da90d550d8833",
  "118467fe2c5c3a",
  "1329a68ee47e20",
  "1c2ece82a6033c",
  "08f97e0eca0bfd",
  "049e155dd2d0d3",
  "16d6a050cd70c1",
  "0b397517afa48e",
  "05a76dda89bb59",
  "14d46415d485c7",
  "09ca1106c6387c",
  "0c4faaf4394b30",
  "17a41ec523cde0",
  "119d6c95198e37",
  "12276a40909589",
  "0b20e13546bbf2",
  "1d87e2b2dd2741",
  "09b065c7188e83",
  "12846d5c9e1639",
  "07238d0fbc1f44",
  "01715c92e60a72",
  "078aa56234629c",
  "1ce2e84ccdb5fe",
  "19da289b2d6af0",
  "1536f4d727548b",
  "08fd5fb38209ef",
  "147a212a961266",
  "135da8f067cf68",
  "0909b960a87e62",
  "1a62e792c82137",
  "1fe1fa45d4d7c4",
  "065243ac2c952b",
  "0eec063cd3eb74",
  "0d6136a641825c",
  "1566e79c4b3064",
  "0f3c2982dd6002",
  "1fad9ebe79a78a",
  "0fbc7f59f6b494",
  "04214d18925180",
  "0454a1db432672",
  "1821e031fb255d",
  "1a4ed8d4cdb646",
  "1c9e28e4178b72",
  "1e359934f1f1ec",
  "04d08595732868",
  "14645165bbb81b",
  "17145b209eeec9",
  "0c905dd35550be",
  "05b8c35e046669",
  "0dd1aff7bda19b",
  "1dec5c9732c074",
  "14d5d733f74707",
  "08b01d9971b60e",
  "067124248b8aff",
  "0199bfbf94af92",
  "1633109bb6460a",
  "0fc08b5f94468c",
  "03b19bd016d33d",
  "1685bc33bae34a",
  "0bb5458a74df2c",
  "0325478d005440",
  "0337a85e9308f2",
  "0a8c886d80fd5c",
  "185311666b61fc",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "1efd163bfb33da",
  "1f46c4ef6ac4d7",
  "11b7ab2695eb18",
  "072ce160c8082d",
  "190d7c2e327d3d",
  "046c23dcba92bf",
  "118b7bc4afe5b6",
  "1274ce9edf0115",
  "085969cb262676",
  "13cb71ccb5afb7",
  "07de793f8f1de4",
  "03d49c53032428",
  "155f371315febc",
  "04c855c392c76c",
  "04b33c25b0354c",
  "0fe1bdd572ffa7",
  "0406f23fd97613",
  "163c7dd316b222",
  "12ffba1ed401a4",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "0c4cf8c26fbc50",
  "0f7d887fe1b5f5",
  "0dfce17da48e79",
  "15ce100a9859b9",
  "0d3ab85ca9969c",
  "10891eb94d6358",
  "079c54f3befcd8",
  "1c5f6097620bdd",
  "14bcc4e020a530",
  "04afd7b6610f84",
  "0ad1af84f58c53",
  "0c9f3b684a2422",
  "01ac746dd90d55",
  "0f5899f30868dd",
  "04b3d9128ae6cb",
  "120844a2e1d975",
  "120616b63e336a",
  "146158308d5909",
  "114a9ba687508a",
  "032adbc994f3d9",
  "015193dd737374",
  "19bdbf9f197afb",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "1072b4eee01b13",
  "0883bd1d8b5e18",
  "1832573acb5e3a",
  "0dda92ef714031",
  "07ed1e4ecb3e7b",
  "01f802464c4657",
  "02801c87661c69",
  "1b9fd603579615",
  "02007912c64c0a",
  "0a1664372d5768",
  "1d1afeeff15c78",
  "1e72713f0e565e",
  "1ec4f7f89445e5",
  "037f731d280bd0",
  "108dc65f39c17f",
  "05e454469c26b5",
  "148428b1731bc1",
  "04be7e8b1f80de",
  "06474b3cab5f7d",
  "1a3c393c35c89a",
  "1c6671f117e7bb",
  "1031a4965bbfe7",
  "17ca07b6641cab",
  "1398968fe86310",
  "04fd33db883e5b",
  "12c6b2638f3e17",
  "071016afb646de",
  "09e391eaeee70c",
  "1e5edb34a203b8",
  "070cba07175ef1",
  "19c62128f32a3a",
  "03e98115f3150d",
  "14bd19fca59aea",
  "04d907b54695ab",
  "13b49d727724da",
  "040f6e1028bc3d",
  "04cb4d64989dd1",
  "0343dfd86fa025",
  "0a45dc5319fffc",
  "0a8aa05e0f2403",
  "140aafdbf875e7",
  "067347ba25034c",
  "184eb45315e45b",
  "08cecb857f4be9",
  "05377aae435acd",
  "02b5b3be8bd992",
  "12d2cccf8618f1",
  "163652467d3afb",
  "0e19475b802fda",
  "0e8a730852fb31",
  "1d135d725e06fc",
  "1a79c9e5600971",
  "08bc1f50ee610b",
  "1aecadac49e364",
  "09940dc4df55a7",
  "1c0500967d4d78",
  "03532462f8c3d4",
  "0615b948a32d94",
  "0bf3c042f5fde6",
  "1fbcd656c150c1",
  "01b03de9c0e033",
  "1aefbea6d8f8d8",
  "0e9a47979534bd",
  "108a0b5a18a831",
  "09572007510ad1",
  "1b3de717748274",
  "0172763ebe7592",
]
`;
